Eliminate oversize padding above first children of problems that are not titles

--- a/homework.css
+++ b/homework.css
@@ -358,6 +358,10 @@ a:hover {
         border-radius: 0 0 4px 0;
         z-index: -1;
     }
+    
+    .fancy .problem > :first-child:not(.title) {
+        margin-top: -40px;
+    }
 
     .fancy .points {
         position: absolute;
