--- a/homework.css
+++ b/homework.css
@@ -66,7 +66,7 @@ table {
 
 th {
     color: white;
-    background-color: var(--color-sky);
+    background-color: var(--color-for-headers);
 }
 
 th:first-child {
@@ -91,7 +91,7 @@ table td, table th {
 }
 
 figure {
-    border: 2px solid var(--color-sky);
+    border: 2px solid var(--color-for-chrome);
     padding: 16px;
 }
 
